add form and route to add new items

--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -17,4 +17,16 @@
       </ul>
     </div>
   </div>
+
+  <div class="row">
+    <form action="/create" method="post" class="form-example">
+      <div class="form-example">
+        <label for="title">Title</label>
+        <input type="text" name="title" id="title" required />
+      </div>
+      <div class="form-example">
+        <input type="submit" value="Add item" />
+      </div>
+    </form>
+  </div>
 {% endblock %}
